# observatory

./: .gitignore  Cargo.toml
sample/: simple.yml
src/: api.rs  main.rs
src/config/: mod.rs
src/logging/: mod.rs  web.rs
src/model/: mod.rs
src/vizceral/: types.rs
webapp/: jsconfig.json  package.json  webpack.common.js  webpack.dev.js
webapp/src/: index.html  index.js  style.css
webapp/src/components/: observatoryComponent.css  observatoryComponent.js  vizceralComponent.css  vizceralComponent.js
webapp/src/data/: static.js
webapp/src/state/: observatory.js
webapp/src/vizceral/: component.js  style.css
