[package]
name = "observatory"
version = "0.1.0"
authors = ["Benn Sundsrud <benn.sundsrud@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7.9"
actix-web = "0.7.18"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
slog = { version = "2.4.1", features = [ "max_level_trace", "release_max_level_trace" ] }
slog-term = "2.4.0"
slog-async = "2.3.0"
futures = "0.1.25"
lazy_static = "1.3.0"
toml = "0.4.10"
reqwest = "0.9.10"
chrono = "0.4.6"
failure = "0.1.5"
slog-atomic = "2.0.0"
slog-envlogger = "2.1.0"
serde_repr = "0.1.3"
petgraph = "0.4.13"
serde_yaml = "0.8.8"
